# workflowVM

./: Dockerfile  LICENSE  README.md  accounts.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: agent.yml  release.yml
agent/: agent.py
docs/superpowers/plans/: 2026-04-05-packaging-deployment.md  2026-04-05-workflowvm.md
docs/superpowers/specs/: 2026-04-05-packaging-deployment-design.md  2026-04-05-workflowvm-design.md  2026-04-10-rpyc-architecture-design.md
sdk/: __init__.py
server/: account_pool.py  main.py  protocol.py  remote_object.py
tests/: conftest.py  test_account_pool.py  test_account_setup.py  test_cli.py  test_github_api.py  test_integration.py  test_protocol.py  test_proxy.py  test_remote_object.py  test_rpyc_integration.py  test_session_manager.py
workflowvm/: __init__.py
workflowvm/agent/: agent.py
workflowvm/cli/: main.py  setup_cmd.py
workflowvm/sdk/: __init__.py  controller.py  proxy.py  stream.py
workflowvm/server/: account_setup.py  github_api.py  instance_pool.py  main.py  protocol.py  remote_object.py  session_manager.py
