[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflowvm"
version = "0.1.4"
description = "GitHub Actions runner as a schedulable Python sandbox via WebSocket remote objects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4.0"]

[project.scripts]
workflowvm = "workflowvm.cli.main:main"
workflowvm-agent = "workflowvm.agent.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["workflowvm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
